# github-contrib-stats

./: .gitignore  .vercelignore  Cargo.toml  README.md  vercel.json  wrangler.toml
.github/workflows/: release.yaml
.playwright-cli/: page-2026-06-16T12-29-35-528Z.yml
api/: contributed.rs  created.rs  svg.rs  vercel.rs
cli/: Cargo.toml
cli/src/: main.rs
cloudflare/: Cargo.toml
cloudflare/src/: lib.rs  utils.rs
src/: github.rs  lib.rs  main.rs  render.rs
vercel/: Cargo.toml  vercel.json
vercel/api/: form.html  generator.html  stats.html  vercel.rs
