[package]
name = "github-contrib-stats"
version.workspace = true
edition.workspace = true

[workspace]
members = ["vercel", "cloudflare"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.71"
tokio = { version = "1.28.1", features = ["full"] }

[dependencies]
anyhow.workspace = true
tokio.workspace = true
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.17"
once_cell = "1.17.1"
prettytable = "0.10.0"
reqwest = { version = "0.11.17", features = ["json", "deflate", "brotli"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
svg = "0.13.1"
http = "0.2.9"
clap = { version = "4.2.7", features = ["env"] }
git-testament = "0.2.4"
env_logger = "0.10.0"
