[package]
name = "github-contrib-stats"
version.workspace = true
edition.workspace = true

[workspace]
members = ["vercel", "cloudflare", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.71"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.17"
once_cell = "1.17.1"
prettytable = "0.10.0"
reqwest = { version = "0.11.17", features = ["json", "deflate", "brotli"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
svg = "0.13.1"
http = "0.2.9"
futures = "0.3.28"
base64 = "0.21.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
