[package]
name = "github-contrib-stats"
version.workspace = true
edition.workspace = true

[workspace]
members = ["vercel", "cloudflare", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.71"
base64 = "0.22.0"
clap = { version = "4.2.7", features = ["env"] }
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.11.0"
futures = "0.3.28"
git-testament = "0.2.4"
http = "1.0.0"
log = "0.4.17"
prettytable = "0.10.0"
reqwest = { version = "0.12.0", features = ["json", "deflate", "brotli"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
svg = "0.18.0"
tokio = { version = "1.28.1", features = ["full"] }
url = "2.3.1"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
http.workspace = true
log.workspace = true
prettytable.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
svg.workspace = true

[profile.release]
lto = true
strip = true
codegen-units = 1
