[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
github-contrib-stats = { path = ".." }
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
git-testament.workspace = true
env_logger.workspace = true

[[bin]]
name = "github-contrib-stats"
path = "src/main.rs"
