[package]
name = "github-contrib-stats-cloudflare"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
github-contrib-stats = { path = ".." }
anyhow.workspace = true
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_json = "1.0.96"
worker = "0.0.16"
