[package]
name = "github-contrib-stats-cloudflare"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
github-contrib-stats = { path = ".." }

anyhow.workspace = true
console_error_panic_hook = { version = "0.1.7", optional = true }
worker = "0.5.0"
