[package]
name = "github-contrib-stats-vercel"
version.workspace = true
edition.workspace = true

[dependencies]
github-contrib-stats = { path = ".." }
anyhow.workspace = true
tokio = { version = "1.28.1", features = ["full"] }
log = "0.4.17"
url = "2.3.1"
vercel_runtime = "0.3.4"
env_logger = "0.11.0"

# make the name of the binary match the `path.basename(entry_path, 'rs')`
# https://github.com/vercel-community/rust/blob/main/src/lib/cargo.ts#L200
# Must set Root Directory to `vercel` in https://vercel.com/j178/github-contrib-stats/settings
[[bin]]
name = "vercel"
path = "api/vercel.rs"
