[package]
name = "github-contrib-stats-vercel"
version = "0.0.0"
edition.workspace = true

[dependencies]
github-contrib-stats = { path = ".." }

anyhow.workspace = true
bincode = "1.3"
env_logger.workspace = true
log.workspace = true
redis = { version = "0.29", features = ["tokio-rustls-comp"] }
serde.workspace = true
tokio.workspace = true
url.workspace = true
vercel_runtime = "1.0.0"

# make the name of the binary match the `path.basename(entry_path, 'rs')`
# https://github.com/vercel-community/rust/blob/main/src/lib/cargo.ts#L200
# Must set Root Directory to `vercel` in https://vercel.com/j178/github-contrib-stats/settings
[[bin]]
name = "vercel"
path = "api/vercel.rs"
